--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,7 +2,7 @@ name: step_2_run_test_java
 on:
   push:
     branches: [ main ]
-  pull-request:
+  pull_request:
     branches: [ main ]
 jobs:
   test_build_job:
