--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Create directory
         run: mkdir staging && cp target/*.jar staging
       - name: Upload
-        run: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: package
           path: staging
