--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,9 +1,9 @@
 name: step_2_run_test_java
 on:
   push:
-    branches: [ main ]
+    branches: [ integration ]
   pull_request:
-    branches: [ main ]
+    branches: [ integration ]
 jobs:
   test_build_job:
     runs-on: ubuntu-latest
