--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,9 +1,11 @@
 name: step_2_run_test_java
+
 on:
   push:
     branches: [ integration ]
   pull_request:
     branches: [ integration ]
+
 jobs:
   test_build_job:
     strategy:
@@ -11,14 +13,15 @@ jobs:
       matrix:
         targetRepo:
           - ga_test
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
-        with:
-          repository: tr/${{ matrix.targetRepo }}
-          token: ${{ secrets.TOKEN }}
-          fetch-depth: 0
+        # with:
+        #   repository: tr/${{ matrix.targetRepo }}
+        #   token: ${{ secrets.TOKEN }}
+        #   fetch-depth: 0
 
       - name: Set up JDK 14
         uses: actions/setup-java@v3
