--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Build with maven
         run: mvn --batch-mode --update-snapshots package
 
+      - name: Test
+        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+
       - name: Create directory
         run: mkdir staging && cp target/*.jar staging
 
@@ -50,4 +53,3 @@ jobs:
           path: reports/jest-*.xml    # Path to test results
           reporter: jest-junit
           fail-on-error: true
-          
