--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   test_build_job:
-    strategy:
-      fail-fast: false
-      matrix:
-        targetRepo:
-          - ga_test
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     targetRepo:
+    #       - ga_test
 
     runs-on: ubuntu-latest
     steps:
