--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -36,20 +36,20 @@ jobs:
       - name: Test
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
-      - name: Create directory
-        run: mkdir staging && cp target/*.jar staging
-
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: package
-          path: staging
+      # - name: Create directory
+      #   run: mkdir staging && cp target/*.jar staging
+      #
+      # - name: Upload
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: package
+      #     path: ga_test/staging
 
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
           name: Maven Tests
-          path: ga_test/reports/jest-*.xml
+          path: reports/jest-*.xml
           reporter: jest-junit
           fail-on-error: true
