--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -50,6 +50,6 @@ jobs:
         if: success() || failure()
         with:
           name: Maven Tests
-          path: ga_test/reports/jest-*.xml
+          path: reports/jest-*.xml
           reporter: jest-junit
-          fail-on-error: true
+          # fail-on-error: true
