--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -38,18 +38,19 @@ jobs:
 
       # - name: Create directory
       #   run: mkdir staging && cp target/*.jar staging
-      #
-      # - name: Upload
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: package
-      #     path: ga_test/staging
 
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+      - name: Upload
+        uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
-          name: Maven Tests
-          path: reports/jest-*.xml
-          reporter: jest-junit
-          # fail-on-error: true
+          name: test-results
+          path: jest-junit.xml
+
+      # - name: Test Report
+      #   uses: dorny/test-reporter@v1
+      #   if: success() || failure()
+      #   with:
+      #     name: Maven Tests
+      #     path: reports/jest-*.xml
+      #     reporter: jest-junit
+      #     # fail-on-error: true
