--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -15,6 +15,9 @@ jobs:
     #       - ga_test
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./report
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
@@ -44,13 +47,13 @@ jobs:
         if: success() || failure()
         with:
           name: test-results
-          path: jest-junit.xml
+          path: report/jest-junit.xml
 
-      # - name: Test Report
-      #   uses: dorny/test-reporter@v1
-      #   if: success() || failure()
-      #   with:
-      #     name: Maven Tests
-      #     path: reports/jest-*.xml
-      #     reporter: jest-junit
-      #     # fail-on-error: true
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Maven Tests
+          path: 'report/*.xml'
+          reporter: jest-junit
+          # fail-on-error: true
