--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           java-version: '14'
           distribution: 'adopt'
-          # cache: maven
+          cache: maven
 
       - name: Build with maven
         run: mvn --batch-mode --update-snapshots -DskipTests package
