--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -16,22 +16,32 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+
       - name: Checkout the repository
         uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
         # with:
         #   repository: tr/${{ matrix.targetRepo }}
         #   token: ${{ secrets.TOKEN }}
         #   fetch-depth: 0
 
-      - name: Set up JDK 14
-        uses: actions/setup-java@v3
-        with:
-          java-version: '14'
-          distribution: 'adopt'
-          cache: maven
-
-      - name: Build with maven
-        run: mvn --batch-mode --update-snapshots -DskipTests package
+      # - name: Set up JDK 14
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '14'
+      #     distribution: 'adopt'
+      #     cache: maven
+      #
+      # - name: Build with maven
+      #   run: mvn --batch-mode --update-snapshots -DskipTests package
 
       # - name: Test
       #   run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
