--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -28,20 +28,16 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-        # with:
-        #   repository: tr/${{ matrix.targetRepo }}
-        #   token: ${{ secrets.TOKEN }}
-        #   fetch-depth: 0
 
-      # - name: Set up JDK 14
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: '14'
-      #     distribution: 'adopt'
-      #     cache: maven
-      #
-      # - name: Build with maven
-      #   run: mvn --batch-mode --update-snapshots -DskipTests package
+      - name: Set up JDK 14
+        uses: actions/setup-java@v3
+        with:
+          java-version: '14'
+          distribution: 'adopt'
+          cache: maven
+
+      - name: Build with maven
+        run: mvn --batch-mode --update-snapshots -DskipTests package
 
       # - name: Test
       #   run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
