--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -47,14 +47,21 @@ jobs:
         if: success() || failure()
         with:
           name: test-results
-          path: reports/jest-junit.xml
-          reporter: jest-junit
+          path: jest-junit.xml
 
-      # - name: Test Report
-      #   uses: dorny/test-reporter@v1
-      #   if: success() || failure()
-      #   with:
-      #     name: Maven Tests
-      #     path: '.xml'
-      #     reporter: jest-junit
-      #     fail-on-error: true
+name: 'Test Report'
+on:
+  workflow_run:
+    workflows: ['step_2_run_test_java']
+    types:
+      - completed
+jobs:
+  report:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: dorny/test-reporter@v1
+      with:
+        artifact: test-results
+        name: JEST Tests
+        path: '*.xml'
+        reporter: jest-junit
