--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -39,6 +39,19 @@ jobs:
         FORCE_COLOR: 0
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Cache node modules
+      id: cache-npm
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os  }}-
     - name: Use filter to run test
       uses: dorny/paths-filter@v2.2.1
       id: filter
